Commit kedua blog PTI

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,5 +1,5 @@
 .page-header {
-  background-color: #c25100;
+  background-color: limegreen;
   margin-top: 0;
   margin-bottom: 40px;
   padding: 20px 20px 20px 40px;
@@ -59,13 +59,13 @@ h4 {
 
 .btn-secondary,
 .btn-secondary:visited {
-  color: #c25100;
+  color: limegreen;
   background: none;
-  border-color: #c25100;
+  border-color: limegreen;
   margin-left: 15px;
 }
 
 .btn-secondary:hover {
   color: #ffffff;
-  background-color: #c25100;
+  background-color: limegreen;
 }
